@@ -44,8 +44,12 @@ hockeypuck (0.7~a2) precise; urgency=low
   * mgo/keystats.go:
     - Add map-reduce to calculate hourly and daily totals of
       key creation and modification. LP: #1075391
+  * cmd/hockeypuck-mgo/main.go, mgo/client.go, mgo/keystats.go,
+    mgo/worker.go, status_types.go, www/templates/pks/status.tmpl:
+    - Integrate key stats into op=status page, MR, query fixes.
+      LP: #1075391
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Sat, 01 Dec 2012 18:43:23 -0600
+ -- Casey Marshall <casey.marshall@gazzang.com>  Sun, 02 Dec 2012 21:56:19 -0600
 
 hockeypuck (0.6) precise; urgency=low
 
